# Packet_Analyser

./: .gitignore  CMakeLists.txt  README.md  WINDOWS_SETUP.md
.github/workflows/: cmake.yml
about/: 01_networking_basics.md  02_pcap_and_packet_parsing.md  03_deep_packet_inspection.md  04_application_detection.md  05_flow_tracking_and_rules.md  06_reports_ui_build_ci.md  README.md
rules/: sample_rules.txt
src/: main.cpp  sni_extractor.cpp
ui/: index.html  sample-report.json
workflow/: COMMAND_REFERENCE.md  END_TO_END_WORKFLOW.md
